feat(server/user): add endpoint to fetch the logged user - solves #1
